# Multi-agent-erp-orchestration

./: .gitignore  README.md  activate_uv.bat  pyproject.toml
src/: simulation_main.py  stress_test.py  visualization.py
src/github_decentralized_multi_agent_repo/: __init__.py
