[project]
name = "dmas-o2c"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "trahulkumar", email = "trahulkumar@hotmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "simpy",
    "pandas",
    "numpy",
    "matplotlib",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = false
